Add support for generating the entrypoint thunk

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_EXECUTABLE (rb_fastproto_compiler
     src/protoc_gen_rb_fastproto.cpp
     src/rb_fastproto_code_generator.cpp
     src/rb_fastproto_code_generator_utils.cpp
+    src/rb_fastproto_code_generator_entrypoint.cpp
 )
 TARGET_LINK_LIBRARIES (rb_fastproto_compiler
     protoc protobuf boost_filesystem boost_system
